syntax = "proto3";

package com.strandhvilliam.ordermanagement.grpc;

option java_package = "com.strandhvilliam.ordermanagement.grpc";
option java_outer_classname = "OrderProto";
option java_multiple_files = true;

service OrderManagementService {
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse) {}
  rpc GetManyOrders(GetManyOrdersRequest) returns (ListOrderResponses) {}
  rpc GetOrder(GetOrderIdRequest) returns (OrderResponse) {}
}

message GetOrderIdRequest {
  string orderId = 1;
}

message GetManyOrdersRequest {
  repeated string orderIds = 1;
}

message UpdateOrderStatusRequest {
  string orderId = 1;
  string status = 2;
}

message OrderResponse {
  string id = 1;
  string createdAt = 2;
  string customerId = 3;
  string restaurantId = 4;
  string status = 5;
  repeated OrderItem items = 6;
}

message OrderItem {
  string id = 1;
  string productId = 2;
  string description = 3;
  double cost = 4;
}

message ListOrderResponses {
  repeated OrderResponse orders = 1;
}
